# NakatomiCRM

./: .env.example  .gitignore  AUTHORS.md  AgentLab.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Dockerfile  ETHOS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  install.sh  llms.txt  pyproject.toml  railway-template.json  railway.toml  requirements.txt
.claude/: settings.local.json
.claude/skills/nakatomi-crm/: SKILL.md
.claude/skills/nakatomi-dashboard/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_memory_ingest.py  0003_durable_webhooks.py  0004_api_key_rate_limit.py  0005_custom_fields.py  0006_pg_trgm.py  0007_oauth.py  0008_products.py  0009_email_calendar.py
app/: config.py  db.py  deps.py  main.py  mcp_server.py  models.py  schemas.py  security.py
app/routers/: activities.py  auth.py  calendar.py  companies.py  contacts.py  custom_fields.py  dashboard.py  deals.py  email.py  exports.py  files.py  forecast.py  ingest.py  memory.py  notes.py  oauth.py  pipelines.py  products.py  relationships.py  schema.py  tasks.py  timeline.py  webhooks.py  welcome.py  workspaces.py
app/services/: calendar_io.py  diffs.py  duplicates.py  email_io.py  events.py  export.py  importer.py  merge.py  pagination.py  storage.py  webhook_delivery.py
app/services/ingest/: __init__.py  adapters.py  base.py
app/services/memory/: __init__.py  base.py  registry.py
app/services/memory/adapters/: docdeploy.py  gbrain.py  supermemory.py
docs/: ARCHITECTURE.md  DEPLOYMENT_LESSONS.md  MCP.md  MEMORY.md  RAILWAY_TEMPLATE.md  SKILLS.md
docs/diagrams/: README.md
public/: nakatomi.txt
public/.well-known/: agent.json
scripts/: seed.py
tests/: conftest.py  test_audit_diffs.py  test_auth.py  test_bootstrap.py  test_contacts.py  test_custom_fields.py  test_deals.py  test_duplicates.py  test_email_calendar.py  test_export_import.py  test_files.py  test_ingest.py  test_memory.py  test_merge_contacts.py  test_oauth.py  test_products_forecast.py  test_rate_limit.py  test_relationships_timeline.py  test_smoke.py  test_webhooks.py
